--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.10.3",
     "nuxt": "^3.9.0",
+    "sass": "^1.69.7",
     "vue": "^3.4.5",
     "vue-router": "^4.2.5"
   },
@@ -20,6 +21,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/vue-fontawesome": "^3.0.5"
+    "@fortawesome/vue-fontawesome": "^3.0.5",
+    "@vueuse/core": "^10.7.1"
   }
 }
