--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.10.3",
     "nuxt": "^3.9.0",
+    "nuxt-headlessui": "^1.1.5",
     "sass": "^1.69.7",
     "vue": "^3.4.5",
     "vue-router": "^4.2.5"
