--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.5",
     "@headlessui/vue": "^1.7.17",
-    "@vueuse/core": "^10.7.1"
+    "@prisma/client": "^5.8.1",
+    "@vueuse/core": "^10.7.1",
+    "prisma": "^5.8.1"
   }
 }
