--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@headlessui/vue": "^1.7.17",
     "@prisma/client": "^5.8.1",
     "@vueuse/core": "^10.7.1",
+    "bcrypt": "^5.1.1",
     "prisma": "^5.8.1"
   }
 }
