--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@prisma/client": "^5.8.1",
     "@vueuse/core": "^10.7.1",
     "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "prisma": "^5.8.1"
   }
